# proxhy

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE_RESTRUCTURING.md  CONTRIBUTING.md  DEVELOPMENT.md  README.md  aliases.py  bridge.py  candidate.py  commands.py  formatting.py  keyfile  main.py  models.py  output.txt  patches.py  protocols.py  pyproject.toml  requirements.txt  settings.json  stat_log.jsonl  statsformatting.py  test.py
.github/workflows/: github-releases-to-discord.yml  lint.yml  release.yml
assets/: __init__.py  bedwars_chat.json  bedwars_maps.json  default_settings.json  rush_mappings.json
assets/fetch/: get_bedwars_kill_msgs.py  get_bedwars_maps.py
auth/: __init__.py  errors.py  ms.py
broadcasting/: packets.py  peer_plugins.py  plugin.py  plugin.pyi  plugins.py  proxy.py  settings.py  transform.py
broadcasting/plugins/: base.py  commands.py  login.py  settings.py  spectate.py
compass/: README.md  __init__.py  __main__.py  client.py  errors.py  pyproject.toml  server.py
core/: cache.py  command.py  events.py  net.py  plugin.py  plugin.pyi  proxy.py  settings.py
docs/: TextComponent.md  architecture.md  datatypes.md  entry.md  mcmodels.md  nbt.md  proxhy.md  proxy.md  settings.md
gamestate/: constants.py  enums.py  models.py  state.py
hypixel/: formatting.py  mappings.py
mcauth/: __init__.py  errors.py  pyproject.toml
petty/: endpoints.py  events.py  models.py  nbt.py  net.py  pyproject.toml
petty/protocol/: datatypes.py  datatypes.pyi
plugins/: autoboop.py  broadcast.py  broadcaster.py  chat.py  command.py  commands.py  compass.py  debug.py  gamestate.py  hypixelstate.py  login.py  misc.py  settings.py  slashproxhy.py  sound.py  spatial.py  statcheck.py  window.py
plugins/broadcast/: __init__.py  packets.py  peer_plugins.py  plugins.py
plugins/broadcastee/: plugin.py  plugin.pyi  plugins.py  proxy.py
plugins/commands/: __init__.py  _commands.py
plugins/settings/: __init__.py  _settings.py
plugins/statcheck/: __init__.py  command.py  statcheck.py
plugins/window/: __init__.py  _window.py
protocol/: auth.py  crypt.py  datatypes.py  datatypes.pyi
proxhy/: __main__.py  __main___updated.py  aliases.py  argtypes.py  auth.py  client.py  command.py  datatypes.py  datatypes.pyi  encryption.py  errors.py  formatting.py  gamestate.py  hypixels.py  legacy_bridge.py  main.py  main_new.py  mcmodels.py  models.py  net.py  p2p.py  packets.py  player_list.py  plugin.py  plugin.pyi  proxhy.py  proxy.py  secrets.py  server.py  settings.py  settings.pyi  utils.py
proxhy-gui/: Cargo.toml
proxhy-gui/src/: build.rs  main.rs
proxhy/argtypes/: __init__.py  _argtypes.py  commands.py  hypixel.py  players.py  settings.py
proxhy/assets/: bedwars_maps.json  default_settings.json  item_mappings.json  rush_mappings.json
proxhy/assets/fetch/: get_bedwars_kill_msgs.py  get_bedwars_maps.py  raw_bedwars_kill_msg.txt
proxhy/auth/: __init__.py  msauth.py
proxhy/auth/msmcauthaio/: __init__.py  models.py
proxhy/auth/msmcauthaio/helpers/: __init__.py  microsoft.py  xbox.py
proxhy/core/: __init__.py  events.py  framework.py  net.py  plugin_loader.py  plugin_system.py  proxy.py
proxhy/ext/: commands.py  debug.py  gamestate.py  login.py  statcheck.py  window.py
proxhy/plugins/: __init__.py  _methods.py  commands_new.py  gamestate_new.py  legacy.py  statistics_new.py  test_plugin.py
proxhy/utils/: __init__.py  aliases.py  auth.py  command.py  errors.py  formatting.py  nbt.py
proxhypixel/: formatting.py  mappings.py  models.py
