[project]
name = "proxhy"
version = "2026.02.23"
description = "A Hypixel proxy with various different features"
requires-python = ">=3.14"
license = "MIT"
authors = [{ name = "Kavi Bidlack" }, { name = "Manu Jhawar" }]
dependencies = [
  "compass",
  "httpx>=0.28.1",
  "hypixel-py>=0.4.2",
  "keyring>=25.6",
  "numba>=0.63.1",
  "numpy>=2.3.3",
  "orjson>=3.11.7",
  "petty>=0.2.0",
  "platformdirs>=4.3",
  "pyjwt>=2.10",
  "pyroh>=0.3.0",
  "uvloop>=0.22.1; platform_system != 'Windows'",
  "winloop>=0.5.0"
]

[project.scripts]
proxhy = "proxhy.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"assets" = ["*.json", "*.png"]

[tool.uv.sources]
compass = { git = "https://github.com/kbidlack/compass.git", rev = "076df9ed1b9fe12333dd9f331f05f9a5e0518636" }
petty = { git = "https://github.com/kbidlack/petty.git", rev = "ea200702955ee0fc5b7cd71cc832a7968bc98490" }
