[project]
name = "compass"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
  "aiohttp>=3.0",
  "httpx>=0.28.1",
  "petty",
  "pyroh>=0.4.1",
]

[project.scripts]
compass = "compass.__main__:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["compass"]

[tool.uv.sources]
petty = { workspace = true }
