[project]
name = "mcauth"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
  "cryptography>=48.0.0",
  "httpx>=0.28.1",
  "keyring>=25.6",
  "orjson>=3.11.7",
  "platformdirs>=4.3",
  "pyjwt>=2.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcauth"]
