[package]
name = "proxhy-gui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "proxhy-gui"
path = "src/main.rs"

[dependencies]
dirs = "5"
eframe = "0.31"
egui = "0.31"
self_update = {
  version = "0.41",
  features = [
    "archive-tar",
    "archive-zip",
    "compression-flate2",
    "compression-zip-deflate",
  ]
}

[target.'cfg(windows)'.build-dependencies]
# makes the window not show a console on windows
winit = "0.30"
